Full screen button attendion and scrollbar color fix.

--- a/footer-panel.less
+++ b/footer-panel.less
@@ -1,13 +1,20 @@
 @theme-img-path: '../../../themes/@{theme}/img/';
 
 #app {
-    .footerPanel{
-        .searchPager {
-            .controls{
-                .searchResultsInfo{
-                    width: 340px;
-                }
-            }
-        }
+  .footerPanel{
+    .searchPager .controls .searchResultsInfo {
+      width: 340px;
     }
+    .options.minimiseButtons a.fullScreen {
+      width: 115px;
+      height: 28px;
+      margin-top: 7px;
+      padding: 7px;
+      font-family: sans-serif;
+      font-size: 14px;
+      font-weight: bold;
+      line-height: 1;
+      color: @brand-primary;
+    }
+  }
 }
