--- a/variables.less
+++ b/variables.less
@@ -1,4 +1,4 @@
-@brand-primary:                 #abd331; // Customized from #cc0000
-@link-color:                    @brand-primary; // customized from #869f33;
-@btn-primary-color:             #000; // Customized from #fff
-@scrollbar-thumb-color:         @brand-secondary; // Customized from lighten(@brand-secondary, 10%);
+@brand-primary:                 #abd331;        // Customized from #cc0000
+@link-color:                    @brand-primary; // Customized from #869f33;
+@btn-primary-color:             #000;           // Customized from #fff
+@scrollbar-thumb-color:         @brand-primary; // Customized from lighten(@brand-secondary, 10%);
